# harpou-ai-gateway

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.beat  LICENSE  README.md  beat_launcher.py  celery_worker.py  entrypoint.dev.sh  pdm.lock.OLD  pyproject.toml  run.py  run_tests.py  test_client.html  worker_launcher.py
WebUI_Fonction/: README.md  harpou_ai_gateway_pipe.py
app/: __init__.py  auth.py  cache.py  events.py  extensions.py  llm_connector.py  routes.py  services.py  tasks.py  tools_definitions.py
app/tools/: __init__.py  web_reader.py  web_search.py
config/: config.example.json  config.json  tools_config.json
config/prompts/: default_persona.txt  default_planner.txt  default_routing.txt
docs/: Algo_Agent_Autonome_avance.md  architecture_diagram.md  architecture_diagram_v1.md
logs/: app.log.2025-07-23  app.log.2025-07-24  app.log.2025-07-25
tasks/: llm_tasks.py
tests/: test_config.py
