[project]
name = "harpou-ai-gateway"
version = "0.1.0"
description = "Le cerveau central et l'orchestrateur agentique du Hub Domestique d'IA HARPOU."
authors = [
    {name = "Harpou", email = "contact@harpou.com"},
]
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.6",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "python-dotenv>=1.0.0",
    "eventlet>=0.33.3", # Nécessaire pour le serveur de développement SocketIO
    "flask-cors>=3.0.0",
    "requests>=2.20",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
# Dépendances pour l'environnement de production
prod = [
    "gunicorn>=21.2.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "pdm run python run.py"
worker = "python worker_launcher.py -A celery_worker.celery worker --loglevel=info"