[project]
name = "harpou-ai-gateway"
version = "0.1.0"
description = "Le cerveau central et l'orchestrateur agentique du Hub Domestique d'IA HARPOU."
authors = [
    {name = "Harpou", email = "contact@harpou.com"},
]
dependencies = [
    "flask~=3.1",
    "flask-socketio~=5.5",
    "celery[redis]~=5.5",
    "python-dotenv~=1.1",
    "eventlet~=0.40",
    "flask-cors~=6.0",
    "requests~=2.32",
    "openai~=1.97",
    "flask-limiter>=3.12",
    "beautifulsoup4~=4.12",
    "lxml~=5.2",
    "flask-caching",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
# Dépendances pour l'environnement de production
prod = [
    "gunicorn>=21.2.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python run.py" # Pour le serveur web, utilise le bon monkey-patching
worker = "celery -A celery_worker.celery worker --loglevel=info"
beat = "celery -A celery_worker.celery beat --loglevel=info --schedule=/app/logs/celerybeat-schedule"